testsuite/tests/typing-layouts-block-indices/block_indices_disabled.compilers.reference
File "block_indices.ml", line 41, characters 11-18:
41 | let f () = (.p.#x)
                ^^^^^^^
Error: This construct requires the beta version of the extension "layouts", which is disabled and cannot be used
